--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% block title %}Simple Task{% endblock %}</title>
-    <!--<link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css') }}">-->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 
 
 </head>
@@ -31,6 +31,9 @@
 </div>
 <!--<script src = "{{url_for('static',filename='js/jquery.min.js')}}"></script>
 <script src = "{{url_for('static',filename='js/bootstrap.min.js')}}"></script>-->
-{{current_user}}
+<script src="//cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+{%block script %}{%endblock%}
+{{session}}
 </body>
 </html>
