--- a/webapp/templates/task/task.html
+++ b/webapp/templates/task/task.html
@@ -1,8 +1,35 @@
 {% extends "base.html" %}
-{% block title %}{{super()}}{% endblock %}
+{% import "task/macros.html" as macros %}
+{% block title %}{{title}} - {{super()}}{% endblock %}
 
 {% block body %}
 
-task.main
+<div class="col-lg-9">
+    {{ macros.task_navigate() }}
+    <div class = "row">
+        {% for task in tasks %}
+        <div class="col-lg-12">
+            <div class = "row">
+                <h3>{{ task.title }}</h3>
+                <p>{{ task.text }}</p>
+                <p>任务状态：{% if task.status == 0 %}进行中{% elif task.status == 1 %}已完成{% else %}暂停{% endif %} |
+                    最终期限：{{task.deadline}} {% if task.done_time %}| 完成时间：{{task.done_time}}{%endif%}
+                    {% if task.is_overtime() %} | 已超时{%endif%}
+                </p>
+                {%if request.path == url_for('task.main') %}
+                <form method="post" >{{form.hidden_tag()}}
+                    <div class="form-groups">{{form.task_id(value=task.id,readonly='True',display="none")}}{{form.done_submit()}}
+                        {%if form.task_id.errors%}{% for e in form.task_id.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
+                    </div>
+                </form>
+                {%endif%}
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+
+
+{{ macros.task_sidebar(user=user) }}
 
 {% endblock %}
