--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -12,7 +12,7 @@
 <body>
 <div class = "container">
     <div class = "jumbotron">
-    <h1><a href = "{{url_for('task.main')}}">Simple Task</a></h1>
+    <h1><a href = "{{url_for('index')}}">Simple Task</a></h1>
     </div>
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -29,11 +29,10 @@
 {% block body %}
 {% endblock %}
 </div>
-<!--<script src = "{{url_for('static',filename='js/jquery.min.js')}}"></script>
-<script src = "{{url_for('static',filename='js/bootstrap.min.js')}}"></script>-->
 <script src="//cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 {%block script %}{%endblock%}
-{{session}}
+
+
 </body>
 </html>
