--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -14,6 +14,7 @@
                 <ul >
                     <li><a href="{{url_for('index') }}">登录</a></li>
                     <li><a href="{{url_for('index',action='register')}}">注册</a></li>
+                    <li><a href="https://api.weibo.com/oauth2/authorize?response_type=code&client_id=3871744715&redirect_uri=http://simple.loadmemory.org/wb/callback"><img src="http://img.t.sinajs.cn/t4/appstyle/open/images/website/loginbtn/loginbtn_06.png" /></a></li>
                 </ul>
             </div>
         </div>
@@ -59,6 +60,7 @@
                 <ul >
                     <li><a href="{{url_for('index') }}">登录</a></li>
                     <li><a href="{{url_for('index',action='register')}}">注册</a></li>
+                    <li><a href="https://api.weibo.com/oauth2/authorize?response_type=code&client_id=3871744715&redirect_uri=http://simple.loadmemory.org/wb/callback"><img src="http://img.t.sinajs.cn/t4/appstyle/open/images/website/loginbtn/loginbtn_06.png" /></a></li>
                 </ul>
             </div>
         </div>
