--- a/webapp/templates/task/task.html
+++ b/webapp/templates/task/task.html
@@ -5,31 +5,39 @@
 {% block body %}
 
 <div class="col-lg-9">
-{{ task_macros.task_navigate() }}
     <div class = "row">
+        {{ task_macros.task_navigate() }}
+
         {% for task in tasks %}
-        <div class="col-lg-12">
-            <div class = "row">
-                <h3><a href="{{url_for('task.page',task_id=task.id)}}">{{ task.title }}</a> <small><a href="{{url_for('task.edit',task_id=task.id)}}">编辑</a></small></h3>
-                <small>计划完成时间：{{task.deadline}} {% if task.done_time %}| 完成时间：{{task.done_time}}{%endif%}
-                    {% if task.is_overtime() %} | {{task.over_time() }}{%endif%}</small>
+            <div class="col-lg-9">
+                <div class = "row">
+                    <h3><a href="{{url_for('task.page',task_id=task.id)}}">{{ task.title }}</a> <small><a href="{{url_for('task.edit',task_id=task.id)}}">编辑</a></small></h3>
+                    <small>计划完成时间：{{task.deadline}} {% if task.done_time %}| 完成时间：{{task.done_time}}{%endif%}
+                        {% if task.is_overtime() %} | {{task.over_time() }}{%endif%}</small>
 
+                    <p>{{ task.text }}</p>
 
-                <p>{{ task.text }}</p>
-                <small>{%if not task.comment_allowed%}评论关闭{%else%}{{ task.count_comments() | length }}个评论{%endif%}</small>
-                {%if request.path == url_for('task.main') %}
-                <form method="post" >{{form.hidden_tag()}}
-                    <div class="form-groups">{{form.task_id(value=task.id,readonly='True',style='display:none;')}}{{form.done_submit(class='btn btn-success btn-xs')}}
-                        {%if form.task_id.errors%}{% for e in form.task_id.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
-                    </div>
-                </form>
-                {%endif%}
+                </div>
             </div>
-        </div>
+            <div class="col-lg-9">
+                <div class = "row">
+                    {% if task.status == 0%}<button class="btn btn-success btn-xs">确认完成</button>{% endif %}
+
+                    {% if task.comment_allowed == 1 %}<button class="btn btn-default btn-xs">关闭评论</button>
+                    {% else %}<button class="btn btn-default btn-xs">允许评论</button>{%endif%}
+
+                    {% if task.status == 0 %}
+                        <button class="btn btn-default btn-xs">删除</button>
+                    {% endif %}
+                </div>
+                <div class = "row">
+                    <small>{%if not task.comment_allowed%}评论已关闭{%else%}{{ task.count_comments() | length }}个评论{%endif%}</small>
+                </div>
+            </div>
         {% endfor %}
     </div>
 </div>
 
-{{ task_macros.task_sidebar(user=user) }}
+{{ task_macros.task_sidebar(user=current_user) }}
 
 {% endblock %}
