--- a/webapp/templates/task/task_page.html
+++ b/webapp/templates/task/task_page.html
@@ -4,65 +4,78 @@
 
 {% block body %}
 <div class="col-lg-9">
-    {{ macros.task_navigate() }}
     <div class = "row">
-        <div class="col-lg-12">
+        {{ macros.task_navigate() }}
+
+        <div class="col-lg-9">
             <div class = "row">
                 <h3>{{ task.title }} <small><a href="{{url_for('task.edit',task_id=task.id)}}">编辑</a></small></h3>
                 <small>创建于{{task.create_time}}，计划完成时间{{task.deadline}}{% if task.is_overtime() %}，{{task.over_time() }}{%endif%}</small>
             </div>
         </div>
-        <div class="col-lg-12">
+        <div class="col-lg-9">
             <div class = "row">
                 <p>{{ task.text }}</p>
+            </div>
+        </div>
+        <div class="col-lg-9">{# 功能按钮 start #}
+            <div class = "row">
                 {% if task.status !=1 %}
-                <div class="form-groups">
-                    <form method="post" >{{done_form.hidden_tag()}}
-                        {{done_form.task_id(value=task.id,readonly='True',style='display:none;')}}{{done_form.done_submit(class='btn btn-success btn-sm')}}
-                        {%if done_form.task_id.errors%}{% for e in done_form.task_id.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
-                    </form>
-                </div>
+                    <button class="btn btn-success btn-xs">确认完成</button>
+                {% endif %}
+
+                {% if task.comment_allowed == 1 %}
+                    <button class="btn btn-default btn-xs">关闭评论</button>
+                {% else %}
+                    <button class="btn btn-default btn-xs">允许评论</button>
+                {%endif%}
+
+                {% if task.status == 0 %}
+                    <button class="btn btn-default btn-xs">删除</button>
                 {% endif %}
             </div>
-        </div>
-    </div>
+        </div>{# 功能按钮 end #}
 
-    {% if task.comment_allowed %}
-    <div class="col-sm-12">
-        <div class="col-sm-6">
-        <form method="post">
-            {{comment_form.hidden_tag()}}
-            <div class="row control-group">
-                {{comment_form.text.label}}{%if comment_form.text.errors%}{% for e in comment_form.text.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
-                {{comment_form.text(class='form-control')}}
-            </div>
-            <div class="row control-group">
-                {{comment_form.submit(class='btn btn-info btn-xs')}}
-            </div>
-        </form>
-        </div>
-    </div>
 
-    <div class="col-sm-12">
-         <div class="col-sm-6">
-        {% for comment in comments %}
+        <div class="col-lg-9">{# 评论区 start #}
             <div class = "row">
-                {{comment.username()}}在{{comment.date}}说：
-                <br />{{comment.text}}
+                {% if task.comment_allowed %}
+                    <div class="col-lg-9">
+                        <div class = "row">
+                            <form method="post">
+                                {{comment_form.hidden_tag()}}
+                                <div class="row control-group">
+                                    {{comment_form.text.label}}{%if comment_form.text.errors%}{% for e in comment_form.text.errors%}<p class="help-block">{{e}}</p>{% endfor %}{% endif %}
+                                    {{comment_form.text(class='form-control')}}
+                                </div>
+                                <div class="row control-group">
+                                    {{comment_form.submit(class='btn btn-warning btn-xs')}}
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-9">
+                         <div class = "row">
+                        {% for comment in comments %}
+                            <div class = "row">
+                                {{comment.username()}}在{{comment.date}}说：
+                                <br />{{comment.text}}
+                            </div>
+                        {% endfor %}
+                         </div>
+                    </div>
+                {% else %}
+                    <div class="col-lg-9">
+                        <div class = "row">
+                            <p>评论已关闭</p>
+                        </div>
+                    </div>
+                {% endif %}
             </div>
-        {% endfor %}
-         </div>
+        </div>{# 评论区 end #}
     </div>
-    {% else %}
-    <div class="col-lg-8 col-lg-offset-2">
-        <div class="col-lg-12">
-            <p>评论已关闭</p>
-        </div>
-    </div>
-    {% endif %}
 </div>
-
-
 
 
 {{ macros.task_sidebar(user=user) }}
