在首页增加一个重定向，并且把登录试图移到新的login蓝图中，解决记住登录状态时重新打开页面时仍需要登录的问题。 增加people页面的sidebar

--- a/webapp/templates/task/macros.html
+++ b/webapp/templates/task/macros.html
@@ -52,5 +52,8 @@
         <div class="row">
             {{user.count_task()}}
         </div>
+        <div class="row">
+            关注了{{user.following.all()|length}}，关注者{{user.follower.all()|length}}
+        </div>
     </div>
 {% endmacro %}
