--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% block title %}Simple Task{% endblock %}</title>
-    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="//cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
     <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     {%block script %}{%endblock%}
@@ -14,7 +14,7 @@
 <body>
 <div class = "container">
     <div class = "jumbotron">
-    <h1><a href = "{{url_for('index')}}">Simple Task</a></h1>
+    <h1><a href = "{{url_for('login.index')}}">Simple Task</a></h1>
     </div>
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
