--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -12,8 +12,8 @@
         <div class="row">
             <div class="form-groups">
                 <ul >
-                    <li><a href="{{url_for('index') }}">登录</a></li>
-                    <li><a href="{{url_for('index',action='register')}}">注册</a></li>
+                    <li><a href="{{url_for('login.index') }}">登录</a></li>
+                    <li><a href="{{url_for('login.index',action='register')}}">注册</a></li>
                     <li><a href="https://api.weibo.com/oauth2/authorize?response_type=code&client_id=3871744715&redirect_uri=http://simple.loadmemory.org/wb/callback"><img src="http://img.t.sinajs.cn/t4/appstyle/open/images/website/loginbtn/loginbtn_06.png" /></a></li>
                 </ul>
             </div>
@@ -58,8 +58,8 @@
         <div class="row">
             <div class="form-groups">
                 <ul >
-                    <li><a href="{{url_for('index') }}">登录</a></li>
-                    <li><a href="{{url_for('index',action='register')}}">注册</a></li>
+                    <li><a href="{{url_for('login.index') }}">登录</a></li>
+                    <li><a href="{{url_for('login.index',action='register')}}">注册</a></li>
                     <li><a href="https://api.weibo.com/oauth2/authorize?response_type=code&client_id=3871744715&redirect_uri=http://simple.loadmemory.org/wb/callback"><img src="http://img.t.sinajs.cn/t4/appstyle/open/images/website/loginbtn/loginbtn_06.png" /></a></li>
                 </ul>
             </div>
