--- a/webapp/templates/people/people.html
+++ b/webapp/templates/people/people.html
@@ -1,29 +1,19 @@
 {% extends "base.html" %}
+{% import "people/macros.html" as people_macros %}
 {% block title %}{{display_user.username}} - {{super()}}{% endblock %}
 
 {% block body %}
+<div class="col-lg-9">
+    <div class = "row">
 
 当前页面用户{{display_user.username}}
 当前登录用户{{current_user}}
-是否关注{{is_follow}}
+是否关注{{current_user.check_following(display_user.id)}}
 
 
+    </div>
+</div>
 
-<script type="text/javascript">
-$(document).ready(function(){
-  $("button").click(function(){
-    $.get("{{url_for('people.follow',id=display_user.id)}}");
-    parent.location.reload()
-  });
-
-});
-</script>
-{% if is_follow %}
-<button class='btn btn-default btn-xs'>取消关注</button>
-{%else%}
-<button class='btn btn-primary btn-xs'>关注</button>
-{%endif%}
-
-{{display_user.other_follows()}}
+{{ people_macros.people_sidebar(user=display_user,current_user=current_user) }}
 
 {% endblock %}
