--- a/webapp/templates/task/task_new.html
+++ b/webapp/templates/task/task_new.html
@@ -34,10 +34,6 @@
         </div>
     </div>
 </div>
-    {{ macros.task_sidebar(user=user) }}
+    {{ macros.task_sidebar(user=current_user) }}
 
 {% endblock %}
-{% block script%}
-<script src="http://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-<script src="http://cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
-{%endblock%}
