--- a/webapp/templates/task/task.html
+++ b/webapp/templates/task/task.html
@@ -21,17 +21,21 @@
             </div>
             <div class="col-lg-9">
                 <div class = "row">
-                    {% if task.status == 0%}<button class="btn btn-success btn-xs">确认完成</button>{% endif %}
+                    {% if task.status == 0%}<input type="button" class="btn btn-success btn-xs task-done-btn" tid={{task.id}} value="确认完成">{% endif %}
 
-                    {% if task.comment_allowed == 1 %}<button class="btn btn-default btn-xs">关闭评论</button>
-                    {% else %}<button class="btn btn-default btn-xs">允许评论</button>{%endif%}
+                    {% if task.comment_allowed == 1 %}<input type="button" class="btn btn-default btn-xs comment_allow_btn" tid={{task.id}} comment_status="0" value="关闭评论">
+                    {% else %}<input type="button" class="btn btn-default btn-xs comment_allow_btn" tid={{task.id}} comment_status="1" value="打开评论">{%endif%}
 
                     {% if task.status == 0 %}
-                        <button class="btn btn-default btn-xs">删除</button>
+                        <input type="button" class="btn btn-default btn-xs task_delete_btn" tid={{task.id}} value="删除">
                     {% endif %}
                 </div>
                 <div class = "row">
-                    <small>{%if not task.comment_allowed%}评论已关闭{%else%}{{ task.count_comments() | length }}个评论{%endif%}</small>
+                    <small>
+                        <input type="button" class="btn btn-default btn-xs" value="{{task.liked.all()|length}}赞" >
+
+                        {%if not task.comment_allowed%}评论已关闭{%else%}{{ task.comments.all() | length }}个评论{%endif%}
+                    </small>
                 </div>
             </div>
         {% endfor %}
