--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% block title %}Simple Task{% endblock %}</title>
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="//cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
-    <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     {%block script %}{%endblock%}
 
 
@@ -14,7 +13,7 @@
 <body>
 <div class = "container">
     <div class = "jumbotron">
-    <h1><a href = "{{url_for('login.index')}}">Simple Task</a></h1>
+    <h1><a href = "{{url_for('home')}}">Simple Task</a></h1>
     </div>
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -33,6 +32,8 @@
 </div>
 
 
-
+<script src="//cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="{{url_for('static',filename='button.js')}}"></script>
 </body>
 </html>
