--- a/webapp/templates/circle/circle.html
+++ b/webapp/templates/circle/circle.html
@@ -6,19 +6,23 @@
 
 <div class="col-lg-9">
     <div class = "row">
-        {{ task_macros.task_navigate() }}
+        <div class="col-lg-9">
+            <div class = "row">
+                {{ task_macros.task_navigate() }}
 
-        <ul class="nav navbar-nav">
-            <li {% if request.path == url_for('circle.home') %} class="active" {%else%}{%endif%}><a href="{{url_for('circle.home')}}">动态</a></li>
-            <li {% if request.path == url_for('circle.following') %} class="active" {%else%}{%endif%}><a href="{{url_for('circle.following',)}}">我关注的人</a></li>
-            <li {% if request.path == url_for('circle.follower') %} class="active" {%else%}{%endif%}><a href="{{url_for('circle.follower')}}">关注我的人</a></li>
-            <li {% if request.path == url_for('circle.explore') %} class="active" {%else%}{%endif%}><a href="{{url_for('circle.explore')}}">发现</a></li>
-        </ul>
+                <ul class="nav navbar-nav">
+                    <li {% if request.path == url_for('circle.home') %} class="active" {%else%}{%endif%}><a href="{{url_for('circle.home')}}">动态</a></li>
+                    <li {% if request.path == url_for('circle.following') %} class="active" {%else%}{%endif%}><a href="{{url_for('circle.following',)}}">我关注的人</a></li>
+                    <li {% if request.path == url_for('circle.follower') %} class="active" {%else%}{%endif%}><a href="{{url_for('circle.follower')}}">关注我的人</a></li>
+                    <li {% if request.path == url_for('circle.explore') %} class="active" {%else%}{%endif%}><a href="{{url_for('circle.explore')}}">发现</a></li>
+                </ul>
+            </div>
+        </div>
         {% for people in people_list %}
             <div class="col-lg-9">
                 <div class = "row">
                     <h4><a href="{{url_for('people.people',username=people.username)}}">{{ people.username }}</a></h4>
-                    <p>{{people.bio}}</p>
+                    <p>{{people.bio |default('',True) }}</p>
                     <p>{{people.tasks.all()|length}}任务  {{people.follower.all()| length}}关注者</p>
 
                 </div>
