--- a/webapp/templates/people/people.html
+++ b/webapp/templates/people/people.html
@@ -6,14 +6,10 @@
 <div class="col-lg-9">
     <div class = "row">
 
-当前页面用户{{display_user.username}}
-当前登录用户{{current_user}}
-是否关注{{current_user.check_following(display_user.id)}}
-
         {% for task in display_user.tasks.all() %}
         <div class="col-lg-9">
             <div class = "row">
-                <h3><a href="{{url_for('task.page',task_id=task.id)}}">{{ task.title }}</a></h3>
+                <h3><a href="{{url_for('people.task',task_id=task.id)}}">{{ task.title }}</a></h3>
                 <small>计划完成时间：{{task.deadline}} {% if task.done_time %}| 完成时间：{{task.done_time}}{%endif%}
                     {% if task.is_overtime() %} | {{task.over_time() }}{%endif%}</small>
 
