更换全站的导航

--- a/webapp/templates/task/task.html
+++ b/webapp/templates/task/task.html
@@ -5,8 +5,7 @@
 {% block body %}
 
 <div class="col-lg-9">
-    <div class = "row">
-        {{ task_macros.task_navigate() }}
+    <div class = "row row-fluid">
 
         {% for task in tasks %}
             <div class="col-lg-9">
