--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -11,10 +11,46 @@
 
 </head>
 <body>
-<div class = "container">
-    <div class = "jumbotron">
-    <h1><a href = "{{url_for('home')}}">Simple Task</a></h1>
+<div class="container">
+
+    <!--  导航开始  -->
+
+    <nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse"
+                data-target="#example-navbar-collapse">
+            <span class="sr-only">切换导航</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="{{url_for('home')}}">SimpleTask</a>
+        <input type="button" class="btn btn-default btn-lg add-task-btn" value="创建任务">
     </div>
+    <div class="collapse navbar-collapse" id="example-navbar-collapse">
+        <ul class="nav navbar-nav">
+            <li><a href="{{url_for('task.main')}}">任务列表</a></li>
+            <li><a href="{{url_for('circle.home')}}">朋友圈</a></li>
+            <li><a href="{{url_for('circle.explore')}}">发现</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    {{current_user.username}} <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="{{url_for('people.people',username=current_user.username)}}">我的主页</a></li>
+                    <li><a href="#">设置</a></li>
+                    <li class="divider"></li>
+                    <li><a href="{{url_for('logout')}}">退出</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    </div>
+</nav>
+
+    <!-- 导航结束 -->
+
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             {% for category, message in messages %}
@@ -31,9 +67,13 @@
 {% endblock %}
 </div>
 
+<div id="footer col-sm-12" class="text-center">
+    © 2017 SimpleTask
+</div>
 
 <script src="//cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="{{url_for('static',filename='button.js')}}"></script>
+
 </body>
 </html>
