--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,13 +1,24 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>{% block title %}Simple Task{% endblock %}</title>
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+</head>
+<body style="padding:50px">
+<div class = "container">
 
 
-{% block body %}
-<div class="col-sm-4">
-</div>
+<div class="col-sm-4 col-md-offset-4">
+    <div class="row">
+        <h1>Simple Task</h1>
+    </div>
 
 {%if action == 'register' %}
+<div class="row">
 
-<div class="col-sm-4">
     <form method="post">{{register_form.hidden_tag()}}
         <div class="row">
             <div class="form-groups">
@@ -49,11 +60,10 @@
         </div>
     </form>
 </div>
-
-
 {%else%}
 
-<div class="col-sm-4">
+
+<div class="row">
     <form method="post" >{{login_form.hidden_tag()}}
         <div class="row">
             <div class="form-groups">
@@ -91,7 +101,17 @@
 
 
 {%endif%}
-<div class="col-sm-4">
+</div>
 </div>
 
-{%endblock%}
+
+<div id="footer col-sm-12" class="text-center">
+    © 2017 Simple Task
+</div>
+
+<script src="//cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="{{url_for('static',filename='button.js')}}"></script>
+
+</body>
+</html>
