--- a/webapp/templates/people/macros.html
+++ b/webapp/templates/people/macros.html
@@ -3,10 +3,12 @@
     <div class ="col-lg-3">
         <div class = "row">
             <h2>{{user.username}}</h2>
+            {% if current_user != user %}
             {% if current_user.check_following(user.id) %}
             <input type="button" class='btn btn-default btn-xs followbtn' value="取消关注" follow_id={{user.id}}>
             {%else%}
             <input type="button" class='btn btn-primary btn-xs followbtn' value="关注" follow_id={{user.id}}>
+            {%endif%}
             {%endif%}
 
         </div>
