--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Simple Task{% endblock %}</title>
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -11,12 +12,11 @@
 
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
 
     <!--  导航开始  -->
 
     <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse"
                 data-target="#example-navbar-collapse">
@@ -45,7 +45,6 @@
                 </ul>
             </li>
         </ul>
-    </div>
     </div>
 </nav>
 
